--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -3,3 +3,6 @@ train:
   epochs: 10              # エポック数（全データを何周するか）
   learning_rate: 0.0001   # 学習率（Adam最適化器に渡す）
   shuffle: true           # データローダのシャッフル設定（true 推奨）
+  image_height: 480
+  image_width: 640
+  model_filename: model.pt
