--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -1,8 +1,8 @@
 train:
   batch_size: 8          # バッチサイズ（1ステップあたりのサンプル数）
-  epochs: 5               # エポック数（全データを何周するか）
+  epochs: 100               # エポック数（全データを何周するか）
   learning_rate: 0.0001   # 学習率（Adam最適化器に渡す）
   shuffle: true           # データローダのシャッフル設定（true 推奨）
-  image_height: 150
-  image_width: 240
-  model_filename: svga.pt # 出力する学習済みモデルの名前
+  image_height: 88
+  image_width: 200
+  model_filename: train_boja.pt # 出力する学習済みモデルの名前
