--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -1,8 +1,10 @@
 train:
   batch_size: 8          # バッチサイズ（1ステップあたりのサンプル数）
-  epochs: 100               # エポック数（全データを何周するか）
+  epochs: 20               # エポック数（全データを何周するか）
   learning_rate: 0.0001   # 学習率（Adam最適化器に渡す）
   shuffle: true           # データローダのシャッフル設定（true 推奨）
+  resample: true          # 各行動毎のリサンプリング
   image_height: 88
   image_width: 200
-  model_filename: train_boja.pt # 出力する学習済みモデルの名前
+  model_filename: train_boja_formula_world.pt # 出力する学習済みモデルの名前
+  action_classes: ["straight, left, right"] # 条件付き模倣学習の制御指令
