--- a/config/augment_params.yaml
+++ b/config/augment_params.yaml
@@ -1,6 +1,6 @@
 argment:
   input_dataset: hoge.pt                # 拡張対象の元データ名(augment単体実行で使用)
   output_dataset: dataset_gamma.pt      # 拡張後のデータ名
-  gamma_range: [0.9, 1.1]               # ランダムガンマ補正の範囲（暗〜明）
+  gamma_range: [1.0, 1.0]               # ランダムガンマ補正の範囲（暗〜明）
   num_augmented_samples: 2              # 1枚の画像から生成する補正画像の数
-  visualize_image: true                # 拡張済み画像データの可視化
+  visualize_image: false               # 拡張済み画像データの可視化
