--- a/config/params.yaml
+++ b/config/params.yaml
@@ -19,4 +19,4 @@ data_collector:
     dataset_folder: "dataset"
     max_data_count: 1000000
     interval_ms: 200
-    node_save_distance: 5.0
+    save_node_freq: 3 # [s]
