--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -7,8 +7,9 @@ train:
   image_height: 88
   image_width: 200
   action_classes: ["roadside, straight, left, right"] # 条件付き模倣学習の制御指令
-  model_filename: simtest_simple.pt # 出力する学習済みモデルの名前
+  model_filename: simtest_resnet_future_felipe_img.pt # 出力する学習済みモデルの名前
   augment: None # [None, gamma, augmix]
+  freeze_resnet_backbone: false # ResNet事前学習済みバックボーンを凍結してMLP部分のみ学習（true 推奨）
 
 #------以下, データ拡張用のパラメータ-----#
 
