--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -4,11 +4,12 @@ train:
   learning_rate: 0.0002   # 学習率（Adam最適化器に渡す）
   shuffle: true           # データローダのシャッフル設定（true 推奨）
   resample: false          # 各行動毎のリサンプリング. trueにすると各行動におけるデータ数が均一になるようにリサンプリングします.
-  image_height: 88
-  image_width: 200
+  image_height: 224
+  image_width: 224
   action_classes: ["roadside, straight, left, right"] # 条件付き模倣学習の制御指令
-  model_filename: simtest_simple.pt # 出力する学習済みモデルの名前
+  model_filename: simtest_resnet_lock.pt # 出力する学習済みモデルの名前
   augment: None # [None, gamma, augmix]
+  freeze_resnet_backbone: true # ResNet事前学習済みバックボーンを凍結してMLP部分のみ学習（true 推奨）
 
 #------以下, データ拡張用のパラメータ-----#
 
