--- a/config/params.yaml
+++ b/config/params.yaml
@@ -21,3 +21,6 @@ data_collector:
     interval_ms: 200
     save_node_freq: 1 # [s]
     show_histogram: true
+    samples_per_shard: 1000
+    enable_compression: true
+    swap_rb_channels: false
