--- a/config/params.yaml
+++ b/config/params.yaml
@@ -14,8 +14,8 @@ data_collector:
     image_topic: "/image_raw"
     odom_topic: "/odometry"
     cmd_vel_topic: "/cmd_vel"
-    image_height: 88
-    image_width: 200
+    image_height: 224
+    image_width: 224
     dataset_folder: "dataset"
     max_data_count: 1000000
     interval_ms: 100
@@ -23,4 +23,4 @@ data_collector:
     show_histogram: true
     samples_per_shard: 1000
     enable_compression: true
-    swap_rb_channels: false
+    swap_rb_channels: true
