--- a/config/train_params.yaml
+++ b/config/train_params.yaml
@@ -4,12 +4,12 @@ train:
   learning_rate: 0.0002   # 学習率（Adam最適化器に渡す）
   shuffle: true           # データローダのシャッフル設定（true 推奨）
   resample: false          # 各行動毎のリサンプリング. trueにすると各行動におけるデータ数が均一になるようにリサンプリングします.
-  image_height: 224
-  image_width: 224
+  image_height: 66
+  image_width: 200
   action_classes: ["roadside, straight, left, right"] # 条件付き模倣学習の制御指令
-  model_filename: resnet_merge_2-3.pt # 出力する学習済みモデルの名前
-  augment: None # [None, gamma, augmix]
-  freeze_resnet_backbone: true # ResNet事前学習済みバックボーンを凍結してMLP部分のみ学習（true 推奨）
+  model_filename: resnet_tsudanuma_challenge.pt # 出力する学習済みモデルの名前
+  augment: gamma # [None, gamma, augmix]
+  freeze_resnet_backbone: false # ResNet事前学習済みバックボーンを凍結してMLP部分のみ学習（true 推奨）
   
   # WebDataset拡張用パラメータ
   shift_signs: [-2.0, -1.0, 0.0, 1.0, 2.0]  # シフト拡張の係数リスト
@@ -18,9 +18,9 @@ train:
 #------以下, データ拡張用のパラメータ-----#
 
 gamma:
-  gamma_range: [1.0, 1.0]               # ランダムガンマ補正の範囲（暗〜明）
-  contrast_range: [0.6, 1.4]            # ランダムコントラスト補正の範囲（低〜高）
-  num_augmented_samples: 10              # 1枚の画像から生成する補正画像の数
+  gamma_range: [0.4, 1.6]               # ランダムガンマ補正の範囲（暗〜明）
+  contrast_range: [0.4, 1.6]            # ランダムコントラスト補正の範囲（低〜高）
+  num_augmented_samples: 5              # 1枚の画像から生成する補正画像の数
   visualize_image: true                 # 拡張済み画像データの可視化
 
 augmix:
